--- a/wp-content/themes/saltedfishto/style.css
+++ b/wp-content/themes/saltedfishto/style.css
@@ -32,6 +32,22 @@ body.dark-mode{
     color: var(--dark-accent);
 }
 
+.font-2x {
+    font-size: 2rem;
+}
+.font-4x {
+    font-size: 3rem;
+}
+.font-4x {
+    font-size: 4rem;
+}
+.font-5x {
+    font-size: 5rem;
+}
+.font-6x {
+    font-size: 6rem;
+}
+
 .flex-wrapper{
     display: flex;
     min-height: 100vh;
@@ -54,13 +70,23 @@ body.dark-mode{
     z-index: 1020;
 }
 
+.sfto-nav {
+    transition-duration: 0.5s;
+}
+
 .sfto-nav .logo{
     width: 48px;
 }
 
-.sfto-nav {
-    transition-duration: 0.5s;
+.sfto-nav button{
+    border: none;
+    background: none;
+    color: var(--accent);
 }
+.dark-mode .sfto-nav button{
+    color: var(--dark-accent);
+}
+
 .sfto-nav.transparent-bg {
     background-color: transparent;
 }
@@ -251,8 +277,11 @@ footer ul {
 
 footer li:before {
     font-family: "Share Tech Mono", monospace;
-    content:"><\\{'>  ";
+    content: "><{>  ";
     text-shadow: .25rem .25rem .25rem rgba(var(--accent-rgb), .5);
+}
+.dark-mode footer li:before {
+    text-shadow: .25rem .25rem .25rem rgba(var(--dark-accent-rgb), .5);
 }
 
 footer a:hover {
@@ -267,4 +296,59 @@ footer a:visited {
 }
 .dark-mode footer a:visited {
     color: rgba(var(--dark-accent-rgb), .7);
+}
+
+.not-found-page, .no-result {
+    font-family: "Share Tech Mono", monospace;
+}
+
+.wave-animated span {
+    display: inline-block;
+    -webkit-animation: wave-text 2s ease-in-out infinite;
+    animation: wave-text 2s ease-in-out infinite;
+}
+
+.wave-animated span:nth-of-type(1) {
+    -webkit-animation-delay: 0s;
+    animation-delay: 0s;
+}
+.wave-animated span:nth-of-type(2) {
+    -webkit-animation-delay: 0.2s;
+    animation-delay: 0.2s;
+}
+.wave-animated span:nth-of-type(3) {
+    -webkit-animation-delay: 0.4s;
+    animation-delay: 0.4s;
+}
+.wave-animated span:nth-of-type(4) {
+    -webkit-animation-delay: 0.6s;
+    animation-delay: 0.6s;
+}
+.wave-animated span:nth-of-type(5) {
+    -webkit-animation-delay: 0.8s;
+    animation-delay: 0.8s;
+}
+
+@-webkit-keyframes wave-text {
+    00% {
+      transform: translateY(0em);
+    }
+    60% {
+      transform: translateY(-0.6em);
+    }
+    100% {
+      transform: translateY(0em);
+    }
+}
+   
+@keyframes wave-text {
+    00% {
+      transform: translateY(0em);
+    }
+    60% {
+      transform: translateY(-0.6em);
+    }
+    100% {
+      transform: translateY(0em);
+    }
 }
