implement team template as temporary solution

--- a/wp-content/themes/saltedfishto/style.css
+++ b/wp-content/themes/saltedfishto/style.css
@@ -169,6 +169,9 @@ body.dark-mode {
     color: var(--dark-accent);
 }
 
+.transparent-bg {
+    background-color: transparent;
+}
 .sfto-nav.transparent-bg {
     background-color: transparent;
 }
